--- a/games/tiktaktoe/Makefile
+++ b/games/tiktaktoe/Makefile
@@ -1,23 +1,34 @@
-TARGET ?= main
-SRC_DIRS ?= ./src
-BLD_DIRS ?= ./build
+TARGET_EXEC ?= main
 
-LOADLIBES := $(shell find $(SRC_DIRS) -name *.hpp -or -name *.h -or -name *.s)
-SRCS      := $(shell find $(SRC_DIRS) -name *.cpp -or -name *.c -or -name *.s)
-OBJS      := $(addsuffix .o,$(basename $(SRCS)))
-DEPS      := $(OBJS:.o=.d)
-CC        := c++
+BUILD_DIR ?= ./build
+SRC_DIRS  ?= ./src
+
+
+SRCS := $(shell find $(SRC_DIRS) -name *.cpp)
+OBJS := $(SRCS:%=$(BUILD_DIR)/%.o)
+DEPS := $(OBJS:.o=.d)
+CC   := clang++
+CXX  := clang++
 
 INC_DIRS  := $(shell find $(SRC_DIRS) -type d)
 INC_FLAGS := $(addprefix -I,$(INC_DIRS))
 
-CPPFLAGS ?= $(INC_FLAGS) -MMD -MP -Wall
+CPPFLAGS ?= $(INC_FLAGS) -MMD -MP -Wall -g
 
-$(TARGET): $(OBJS)
-	$(CC) $(LDFLAGS) $(LOADLIBES) $(LDLIBS) $(OBJS) -o $@ 
+$(BUILD_DIR)/$(TARGET_EXEC): $(OBJS)
+	$(CC) -v -o $@ $(LDFLAGS) $(OBJS)
+
+# c++ source
+$(BUILD_DIR)/%.cpp.o: %.cpp
+	$(MKDIR_P) $(dir $@)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $< -o $@
+
 
 .PHONY: clean
+
 clean:
-	$(RM) $(TARGET) $(OBJS) $(DEPS) $(BLD_DIRS)
+	$(RM) -r $(BUILD_DIR)
 
 -include $(DEPS)
+
+MKDIR_P ?= mkdir -p
