--- a/games/tiktaktoe/Makefile
+++ b/games/tiktaktoe/Makefile
@@ -3,12 +3,12 @@ TARGET_EXEC ?= main
 BUILD_DIR ?= ./build
 SRC_DIRS  ?= ./src
 
-
+SRC_HEADERS := $(shell find $(SRC_DIRS) -name *.hpp)
 SRCS := $(shell find $(SRC_DIRS) -name *.cpp)
 OBJS := $(SRCS:%=$(BUILD_DIR)/%.o)
 DEPS := $(OBJS:.o=.d)
-CC   := clang++
-CXX  := clang++
+CC   := c++
+CXX  := c++
 
 INC_DIRS  := $(shell find $(SRC_DIRS) -type d)
 INC_FLAGS := $(addprefix -I,$(INC_DIRS))
@@ -16,7 +16,8 @@ INC_FLAGS := $(addprefix -I,$(INC_DIRS))
 CPPFLAGS ?= $(INC_FLAGS) -MMD -MP -Wall -g
 
 $(BUILD_DIR)/$(TARGET_EXEC): $(OBJS)
-	$(CC) -v -o $@ $(LDFLAGS) $(OBJS)
+	$(tags)
+	$(CC) -o $@ $(LDFLAGS) $(OBJS)
 
 # c++ source
 $(BUILD_DIR)/%.cpp.o: %.cpp
@@ -29,6 +30,13 @@ $(BUILD_DIR)/%.cpp.o: %.cpp
 clean:
 	$(RM) -r $(BUILD_DIR)
 
+tags:
+	$(TAGS_EXE) $(SRC_HEADERS) $(SRCS)
+
+run:
+	./$(BUILD_DIRS)/$(TARGET_EXEC)
+
 -include $(DEPS)
 
 MKDIR_P ?= mkdir -p
+TAGS_EXE ?= etags
