some little change for run

--- a/games/tiktaktoe/Makefile
+++ b/games/tiktaktoe/Makefile
@@ -34,7 +34,7 @@ tags:
 	$(TAGS_EXE) $(SRC_HEADERS) $(SRCS)
 
 run:
-	./$(BUILD_DIRS)/$(TARGET_EXEC)
+	./$(BUILD_DIR)/$(TARGET_EXEC)
 
 -include $(DEPS)
 
